--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="home-menu">
-        <span class="home-menu__logo">Instagram</span>
+        <span class="home-menu__logo">Instagram <i class="fa-solid fa-angle-down"></i></span>
         <div class="home-menu__buttons">
             <i class="fa-regular fa-square-plus fa-lg"></i>
             <i class="fa-regular fa-heart fa-lg"></i>
@@ -48,6 +48,43 @@
     </div>
     <div class="posting__picture"><img src="images/loco_posting.jpeg" /></div>
     
+    <div class="posting-react">
+        <div class="posting-react__column">
+            <i class="fa-regular fa-heart fa-lg"></i>
+            <i class="fa-regular fa-comment fa-lg"></i>
+            <i class="fa-regular fa-paper-plane fa-lg"></i>
+        </div>
+        <div class="posting-react__column"><span></span></div>
+        <div class="posting-react__column"><i class="fa-regular fa-bookmark fa-lg"></i></div>     
+    </div>
+
+    <div class="posting-details">
+        <span class="loves">좋아요 572,638,472개</span>
+        <div class="posting-details__id-context">
+            <span class="user-id">satgoloco</span>
+            <span class="context">Namki's html & css got so much better...!</span>
+        </div>
+        <span class="comment">댓글 154,347,982개 보기</span>
+        <div class="posting-details__mycomment">
+            <div class="posting-details__mycomment-column">
+                <img src="images/IMG_6885.JPG">
+                <span class="leave-comment">댓글 달기...</span>
+            </div>
+            <div class="posting-details__mycomment-column">
+                <span>❤️</span>
+                <span>🙌</span>
+                <span><i class="fa-solid fa-circle-plus"></i></span>
+            </div>
+        </div>
+    </div>
+
+    <div class="bottom-menu-bar">
+        <a href="index.html"><i class="fa-solid fa-house"></i></a>
+        <a href="search.html"><i class="fa-solid fa-magnifying-glass"></i></a>
+        <a href="reels.html"><i class="fa-solid fa-clapperboard"></i></a>
+        <a href="shop.html"><i class="fa-solid fa-bag-shopping"></i></a>
+        <a href="profile.html"><img src="images/IMG_6885.JPG"></a>
+    </div>
 
     <script src="https://kit.fontawesome.com/5145802bc9.js" crossorigin="anonymous"></script>
 
