--- a/reels.html
+++ b/reels.html
@@ -26,11 +26,12 @@
             <span>릴스</span>
             <span><i class="fa-solid fa-camera"></i></span>
         </div>
+    </div>
 
-        <div class="reels-videos__context-buttons">
+    <div class="reels-videos__context-buttons">
             <div class="reels-videos__context">
                 <div class="user-info">
-                    <img src="#">
+                    <img src="images/muscle.jpeg">
                     <span>tkrhdrhkdduf</span>
                     <span>팔로우</span>
                 </div>
@@ -40,10 +41,15 @@
                 </div>
             </div>
             <div class="reels-videos__buttons">
-                
+                <i class="fa-regular fa-heart"></i>
+                <span>1,052</span>
+                <i class="fa-regular fa-comment"></i>
+                <span>89</span>
+                <i class="fa-regular fa-paper-plane"></i>
+                <i class="fa-solid fa-ellipsis"></i>
+                <img src="images/muscle.jpeg">
             </div>
         </div>
-    </div>
 
 
     <div class="bottom-menu-bar">
