--- a/reels.html
+++ b/reels.html
@@ -28,6 +28,10 @@
         </div>
     </div>
 
+    <div class="background-image">
+        <img src="images/deadlift.gif">
+    </div>
+
     <div class="reels-videos__context-buttons">
             <div class="reels-videos__context">
                 <div class="user-info">
@@ -37,7 +41,7 @@
                 </div>
                 <div class="video-info">
                     <span>데드리프트 강좌</span>
-                    <span></span>
+                    <span><i class="fa-solid fa-music"></i>tkrhdrhkdduf • 원본 오디오</span>
                 </div>
             </div>
             <div class="reels-videos__buttons">
