--- a/search.html
+++ b/search.html
@@ -19,7 +19,7 @@
         </div>
     </div>
 
-    <div class="search-window">
+    <div class="search-window search-window__modifier">
         <label for="search"><i class="fa-solid fa-magnifying-glass"></i></label>
         <input type="text" placeholder="검색">
     </div>
@@ -35,6 +35,9 @@
         <span class="search-items__item item8"><img src="images/8.jpeg"></span>
         <span class="search-items__item item9"><img src="images/9.jpeg"></span>
         <span class="search-items__item item10"><img src="images/10.jpeg"></span>
+        <span class="search-items__item item11"><img src="images/11.png"></span>
+        <span class="search-items__item item12"><img src="images/12.jpeg"></span>
+
     </div>
 
     <div class="bottom-menu-bar">
